--- a/src/dlya_cafe_restoranov.html
+++ b/src/dlya_cafe_restoranov.html
@@ -196,7 +196,7 @@
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
                             <h5 class="fw-bold">Обладнання в аренду</h5>
-                            <p class="card-text">Ми надаємо в оренду широкий вибір кавового обладнання.
+                            <p class="card-text main-text-size">Ми надаємо в оренду широкий вибір кавового обладнання.
                                 Як Суперавтомати з сенсорним екраном, так і Класичні постові кавомашини у парі з
                                 професійною Кавомолкою.</p>
                         </div>
@@ -208,7 +208,7 @@
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
                             <h5 class="fw-bold">Широкий асортимент <br> продуктів</h5>
-                            <p class="card-text">Ми пропонуємо вам не тільки якісну каву і складові, а й супутні товари:
+                            <p class="card-text main-text-size">Ми пропонуємо вам не тільки якісну каву і складові, а й супутні товари:
                                 сиропи, стакани, цукор, мішалки, а також великий вибір барної атрибутики.</p>
                         </div>
                     </div>
@@ -219,7 +219,7 @@
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
                             <h5 class="fw-bold">Супровід та обслуговування</h5>
-                            <p class="card-text">Візит шеф-бариста раз на тиждень, протягом якого
+                            <p class="card-text main-text-size">Візит шеф-бариста раз на тиждень, протягом якого
                                 перевіряється якість приготування еспресо, налаштування кавомолок та загальний технічний
                                 стан. А також своєчасна доставка продукції.</p>
                         </div>
@@ -240,7 +240,7 @@
             </div>
 
             <div class="col-lg-6">
-                <p class="p-4 magazine indent">Мало хто хоче брати кота в мішку. Особливо, коли це стосується не однієї чашки
+                <p class="p-4 magazine indent main-text-size">Мало хто хоче брати кота в мішку. Особливо, коли це стосується не однієї чашки
                     кави на сніданок, а цілого сегменту у вашому закладі.
                     Розуміючи цей момент, ми завжди проводимо презентацію послуг та товарів у нашому шоурумі.
                     Майбутні партнери мають змогу спробувати різні купажі кави, подивитись ближче на обладнання та
@@ -254,7 +254,7 @@
             <div class="col-lg-6">
                 <div class="p-4">
                     <h5 class="green text-center">Переваги співпраці з нами</h5>
-                    <ul>
+                    <ul class="main-text-size">
                         <li>Ми надаємо в оренду обладнання італійського виробника.</li>
                         <li>Фахівці компанії регулярно відвідують наших клієнтів, пропонуючи повний спектр сервісного
                             обслуговування, від дрібного планового ремонту на місці, до капітального ремонту на
