--- a/src/dlya_magazinov_i_setey.html
+++ b/src/dlya_magazinov_i_setey.html
@@ -196,7 +196,7 @@
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
                             <h5 class="fw-bold">Безкоштовне обладнання</h5>
-                            <p class="card-text">Встановлюємо будь-яку модель кавомашини Автомат, Суперавтомат без
+                            <p class="card-text main-text-size">Встановлюємо будь-яку модель кавомашини Автомат, Суперавтомат без
                                 орендної плати, під виконання обсягу реалізацій кави. Забезпечуємо тумбами під апарат та
                                 рекламними матеріалами.</p>
                         </div>
@@ -209,7 +209,7 @@
                         <div class="card-body">
                             <h5 class="fw-bold">Встановлення кавомашин впродовж однієї доби <span class="select">
                                     *</span></h5>
-                            <p class="card-text">Після узгодження всіх питань, встановлення здійснюється в максимально
+                            <p class="card-text main-text-size">Після узгодження всіх питань, встановлення здійснюється в максимально
                                 стислі терміни.
                                 <br> <br> <span class="select">* </span> Залежно від відстані
                             </p>
@@ -222,7 +222,7 @@
                         <img src="./img/dlya_magazinov_i_setey/icon.webp" class="card-img-top" alt="icon">
                         <div class="card-body">
                             <h5 class="fw-bold">Безкоштовний сервіс <br> та доставка</h5>
-                            <p class="card-text">Забезпечуємо своєчасним сервісом і доставкою інгредієнтів. Всі
+                            <p class="card-text main-text-size">Забезпечуємо своєчасним сервісом і доставкою інгредієнтів. Всі
                                 продукти вищої якості виробництва Голландії та Італії.</p>
                         </div>
                     </div>
@@ -242,7 +242,7 @@
             </div>
 
             <div class="col-lg-6">
-                <p class="p-4 magazine indent">Випити смачну каву зараз можна не тільки в кав'ярнях, але і в магазинах, як
+                <p class="p-4 magazine indent main-text-size">Випити смачну каву зараз можна не тільки в кав'ярнях, але і в магазинах, як
                     великих, так і маленьких. Пропонуємо вам встановити кавове обладнання у вашій торговельній мережі на
                     вигідних умовах. Тільки уявіть, як аромат свіжомеленої кави зустрічає ваших клієнтів і спонукає
                     повертатися за стаканчиком улюбленого напою знову і знову.
@@ -257,7 +257,7 @@
             <div class="col-lg-6">
                 <div class="p-4">
                     <h5 class="green text-center">Переваги співпраці з нами</h5>
-                    <ul>
+                    <ul class="main-text-size">
                         <li>Ми пропонуємо широкий асортимент обладнання для торгових мереж і магазинів абсолютно
                             безкоштовно, під виконання обсягу реалізації кави.</li>
                         <li>Рецептура напоїв ретельно продумана, щоб ви отримали максимум смаку з раціональної витрати
