--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
 
     <!-- /////////////////////////////////////////   Main text    ////////////////////////////////////////     -->
 
-    <section class="main-text mb-4">
+    <section class="main-text main-text-size mb-4">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -200,7 +200,7 @@
                         Ми — команда професіоналів, яка працює на кавовому ринку України з 2005 року. За цей час ми
                         здобули великий досвід в організації сервісу гарячих напоїв. Наша діяльність допомагає партнерам
                         задовольнити потреби своїх клієнтів в цьому напрямку. Розроблені нами оригінальні рецепти
-                        впізнавані споживачами завдяки новітнім смакам та оформленню напоїв
+                        впізнавані споживачами завдяки новітнім смакам та оформленню напоїв.
                     </p>
                     <ul>
                         <li>Більше 5000 клієнтів та торгівельних точок співпрацюють з нами.</li>
@@ -232,7 +232,7 @@
 
                 <div class="col-lg-4 p-1">
                     <div class="image">
-                        <a href="./dlya_cafe_restoranov.html">
+                        <a href="./dlya_cafe_restoranov.html"></a>
                         <img src="./img/index/classic.webp" class="card-img-top" alt="classic">
                         <div class="bottom-left">ДЛЯ КАФЕ, РЕСТОРАНІВ,<br>ОФІСІВ</div>
                     </div>
@@ -240,7 +240,7 @@
 
                 <div class="col-lg-4 p-1">
                     <div class="image">
-                        <a href="./vending.html">
+                        <a href="./vending.html"></a>
                         <img src="./img/index/vending.webp" class="card-img-top" alt="vending">
                         <div class="bottom-left">ВЕНДІНГ</div>
                     </div>
@@ -259,15 +259,15 @@
                 <form class="needs-validation form-main" novalidate>
                     <h4 class="green text-center">Безкоштовна консультація нашого спеціаліста</h4>
                     <div class="mb-3">
-                        <input type="text" name="userName" class="form-control" id="validationName"
+                        <input type="text" name="userName" class="form-control main-text-size" id="validationName"
                             placeholder="Ваше Ім'я" minlength="2" required>
                     </div>
                     <div class="mb-3">
-                        <input type="text" name="telephone" class="form-control validationTelephone tel"
+                        <input type="text" name="telephone" class="form-control main-text-size validationTelephone tel"
                             id="validationTelephone" minlength="18" placeholder="Телефон" required>
                     </div>
                     <div class="mb-3">
-                        <select name="direction" class="form-select validationDirection" id="validationDirection"
+                        <select name="direction" class="form-select main-text-size validationDirection" id="validationDirection"
                             required>
                             <option selected disabled value="">Мене цікавить...</option>
                             <option>Кавомашина для кафе або торгової точки</option>
@@ -275,7 +275,7 @@
                         </select>
                     </div>
                     <div class="mb-3">
-                        <input type="text" name="city" class="form-control validationCity" id="validationCity"
+                        <input type="text" name="city" class="form-control main-text-size validationCity" id="validationCity"
                             placeholder="Ваше місто..." required>
                         <!-- <select name="city" class="form-select validationCity" id="validationCity" required>
                                 <option selected disabled value="">Ваше місто...</option>
@@ -288,7 +288,7 @@
                                 <option>Інше місто</option>
                             </select> -->
                     </div>
-                    <button name="sendRequest" class="btn send-request">Залишити заявку</button>
+                    <button name="sendRequest" class="btn send-request main-text-size">Залишити заявку</button>
                 </form>
             </div>
         </div>
