--- a/src/index.html
+++ b/src/index.html
@@ -92,13 +92,32 @@
         </div>
     </header>
 
+     <!-- /////////////////////////////////////////   sidepanel    ////////////////////////////////////////     -->
+
+    <div class="sidepanel__wrapper d-none d-lg-block">
+        <div class="sidepanel">
+            <div class="sidepanel__text text-nowrap"><span>Соціальні мережі</span></div>
+            <div class="sidepanel__divider"></div>
+            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link" class="sidepanel__icon">
+                <img src="./img/index/instagram_green.webp" alt="instagram">
+            </a>
+            <a target="_blank" href="https://facebook.com/bianchiprofessional" class="sidepanel__icon">
+                <img src="./img/index/facebook_green.webp" alt="facebook">
+            </a>
+            <a target="_blank" href="https://t.me/bianchi_prof" class="sidepanel__icon">
+                <img src="./img/index/telegram_green.webp" alt="telegram">
+            </a>
+        </div>
+    </div>
+    
+     <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
+
     <nav class="navbar navbar-expand-lg bg-light" id="navbar">
         <div class="container">
-            
-            <div width="52" height="48">
+            <div>
                 <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48" class="d-inline-block align-text-top">
+                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48" class="d-inline-block align-text-top">
             </div>
-            <img src="./img/logo_menu2.webp" id="logo2" alt="logo" width="142" height="48" class="d-inline-block align-text-top">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
                 <span class="navbar-toggler-icon"></span>
@@ -232,16 +251,14 @@
 
                 <div class="col-lg-4 p-1">
                     <div class="image">
-                        <a href="./dlya_cafe_restoranov.html"></a>
-                        <img src="./img/index/classic.webp" class="card-img-top" alt="classic">
+                        <a href="./dlya_cafe_restoranov.html"><img src="./img/index/classic.webp" class="card-img-top" alt="classic"></a>
                         <div class="bottom-left">ДЛЯ КАФЕ, РЕСТОРАНІВ,<br>ОФІСІВ</div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 p-1">
                     <div class="image">
-                        <a href="./vending.html"></a>
-                        <img src="./img/index/vending.webp" class="card-img-top" alt="vending">
+                        <a href="./vending.html"><img src="./img/index/vending.webp" class="card-img-top" alt="vending"></a>
                         <div class="bottom-left">ВЕНДІНГ</div>
                     </div>
                 </div>
@@ -295,7 +312,7 @@
     </div>
 
     <!-- /////////////////////////////////////////   SocialNet    ////////////////////////////////////////     -->
-    <section class="socialnet mb-4">
+    <section class="socialnet mb-4 d-lg-none">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 p-1">
