--- a/src/dlya_cafe_restoranov.html
+++ b/src/dlya_cafe_restoranov.html
@@ -93,9 +93,32 @@
         </div>
     </header>
 
+    <!-- /////////////////////////////////////////   sidepanel    ////////////////////////////////////////     -->
+
+    <div class="sidepanel__wrapper d-none d-lg-block">
+        <div class="sidepanel">
+            <div class="sidepanel__text text-nowrap"><span>Соціальні мережі</span></div>
+            <div class="sidepanel__divider"></div>
+            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link" class="sidepanel__icon">
+                <img src="./img/index/instagram_green.webp" alt="instagram">
+            </a>
+            <a target="_blank" href="https://facebook.com/bianchiprofessional" class="sidepanel__icon">
+                <img src="./img/index/facebook_green.webp" alt="facebook">
+            </a>
+            <a target="_blank" href="https://t.me/bianchi_prof" class="sidepanel__icon">
+                <img src="./img/index/telegram_green.webp" alt="telegram">
+            </a>
+        </div>
+    </div>
+
+     <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
+
     <nav class="navbar navbar-expand-lg bg-light" id="navbar">
         <div class="container">
-            <img src="./img/logo_menu.webp" alt="logo" width="194" height="48" class="d-inline-block align-text-top">
+            <div>
+                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48" class="d-inline-block align-text-top">
+                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48" class="d-inline-block align-text-top">
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
                 <span class="navbar-toggler-icon"></span>
@@ -352,37 +375,37 @@
             <div class="row">
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_cafe_restoranov/full1.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full1.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
                 
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_cafe_restoranov/full2.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full2.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
 
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_cafe_restoranov/full3.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full3.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
 
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_cafe_restoranov/full4.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full4.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
 
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_cafe_restoranov/full5.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full5.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
 
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_cafe_restoranov/full6.webp" class="img-thumbnail grayscale" alt="slide">
+                        <img src="./img/dlya_cafe_restoranov/full6.webp" class="img-thumbnail scale" alt="slide">
                     </div>
                 </div>
                 
