--- a/src/dlya_magazinov_i_setey.html
+++ b/src/dlya_magazinov_i_setey.html
@@ -93,9 +93,32 @@
         </div>
     </header>
 
+    <!-- /////////////////////////////////////////   sidepanel    ////////////////////////////////////////     -->
+    
+     <div class="sidepanel__wrapper d-none d-lg-block">
+        <div class="sidepanel">
+            <div class="sidepanel__text text-nowrap"><span>Соціальні мережі</span></div>
+            <div class="sidepanel__divider"></div>
+            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link" class="sidepanel__icon">
+                <img src="./img/index/instagram_green.webp" alt="instagram">
+            </a>
+            <a target="_blank" href="https://facebook.com/bianchiprofessional" class="sidepanel__icon">
+                <img src="./img/index/facebook_green.webp" alt="facebook">
+            </a>
+            <a target="_blank" href="https://t.me/bianchi_prof" class="sidepanel__icon">
+                <img src="./img/index/telegram_green.webp" alt="telegram">
+            </a>
+        </div>
+    </div>
+
+    <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
+
     <nav class="navbar navbar-expand-lg bg-light" id="navbar">
         <div class="container">
-            <img src="./img/logo_menu.webp" alt="logo" width="194" height="48" class="d-inline-block align-text-top">
+            <div>
+                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48" class="d-inline-block align-text-top">
+                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48" class="d-inline-block align-text-top">
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
                 <span class="navbar-toggler-icon"></span>
@@ -177,6 +200,8 @@
     <div class="separator">
         <h3>Для магазинів і торгівельних мереж</h3>
     </div>
+
+     
 
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
 
@@ -349,14 +374,14 @@
             <div class="row">
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_magazinov_i_setey/franke.webp" alt="franke fm-800">
+                        <img src="./img/dlya_magazinov_i_setey/franke.webp" class="scale" alt="franke fm-800">
                         <p>Franke FM-800</p>
                     </div>
                 </div>
 
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_magazinov_i_setey/GaiaStyle.webp" alt="Bianchi Gaia Style">
+                        <img src="./img/dlya_magazinov_i_setey/GaiaStyle.webp" class="scale" alt="Bianchi Gaia Style">
                         <p>Bianchi Gaia Style</p>
                     </div>
                 </div>
@@ -364,28 +389,28 @@
 
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_magazinov_i_setey/wmf.webp" alt="WMF 1500S">
+                        <img src="./img/dlya_magazinov_i_setey/wmf.webp" class="scale" alt="WMF 1500S">
                         <p>WMF 1500 S</p>
                     </div>
                 </div>
 
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_magazinov_i_setey/GaiaTouch.webp" alt="Bianchi Gaia Touch">
+                        <img src="./img/dlya_magazinov_i_setey/GaiaTouch.webp" class="scale" alt="Bianchi Gaia Touch">
                         <p>Bianchi Gaia Touch</p>
                     </div>
                 </div>
 
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_magazinov_i_setey/carimali.webp" alt="Carimali BlueDot">
+                        <img src="./img/dlya_magazinov_i_setey/carimali.webp" class="scale" alt="Carimali BlueDot">
                         <p>Franke FM-800</p>
                     </div>
                 </div>
 
                 <div class="col-sm-4 col-lg-2">
                     <div class="img-fluid">
-                        <img src="./img/dlya_magazinov_i_setey/TaliaTouch.webp" alt="Bianchi Talia Touch">
+                        <img src="./img/dlya_magazinov_i_setey/TaliaTouch.webp" class="scale" alt="Bianchi Talia Touch">
                         <p>Bianchi Talia Touch</p>
                     </div>
                 </div>
