--- a/src/index.html
+++ b/src/index.html
@@ -92,13 +92,14 @@
         </div>
     </header>
 
-     <!-- /////////////////////////////////////////   sidepanel    ////////////////////////////////////////     -->
+    <!-- /////////////////////////////////////////   sidepanel    ////////////////////////////////////////     -->
 
     <div class="sidepanel__wrapper d-none d-lg-block">
         <div class="sidepanel">
             <div class="sidepanel__text text-nowrap"><span>Соціальні мережі</span></div>
             <div class="sidepanel__divider"></div>
-            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link" class="sidepanel__icon">
+            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link"
+                class="sidepanel__icon">
                 <img src="./img/index/instagram_green.webp" alt="instagram">
             </a>
             <a target="_blank" href="https://facebook.com/bianchiprofessional" class="sidepanel__icon">
@@ -109,14 +110,16 @@
             </a>
         </div>
     </div>
-    
-     <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
+
+    <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
 
     <nav class="navbar navbar-expand-lg bg-light" id="navbar">
         <div class="container">
             <div>
-                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48" class="d-inline-block align-text-top">
-                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48" class="d-inline-block align-text-top">
+                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48"
+                    class="d-inline-block align-text-top">
+                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48"
+                    class="d-inline-block align-text-top">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
@@ -163,7 +166,8 @@
                                             кавомашини</a></li>
                                     <li><a class="dropdown-item" href="./kofemolki.html">Кавомолки професійні</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="./vending_avtomaty.html">Вендінгові апарати</a></li>
+                                    <li><a class="dropdown-item" href="./vending_avtomaty.html">Вендінгові апарати</a>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
@@ -239,31 +243,32 @@
 
     <!-- /////////////////////////////////////////   Images    ////////////////////////////////////////     -->
 
-        <div class="container images mb-5">
-            <div class="row">
-                <div class="col-lg-4 p-1">
-                    <div class="image">
-                        <a href="./dlya_magazinov_i_setey.html"><img src="./img/index/horeca.webp" class="card-img-top"
-                                alt="horeca"></a>
-                        <div class="bottom-left">ДЛЯ МАГАЗИНІВ<br>ТА ТОРГІВЕЛЬНИХ МЕРЕЖ</div>
-                    </div>
+    <div class="container images mb-5">
+        <div class="row">
+            <div class="col-lg-4 p-1">
+                <div class="image">
+                    <a href="./dlya_magazinov_i_setey.html"><img src="./img/index/horeca.webp" class="card-img-top"
+                            alt="horeca"></a>
+                    <div class="bottom-left">ДЛЯ МАГАЗИНІВ<br>ТА ТОРГІВЕЛЬНИХ МЕРЕЖ</div>
                 </div>
+            </div>
 
-                <div class="col-lg-4 p-1">
-                    <div class="image">
-                        <a href="./dlya_cafe_restoranov.html"><img src="./img/index/classic.webp" class="card-img-top" alt="classic"></a>
-                        <div class="bottom-left">ДЛЯ КАФЕ, РЕСТОРАНІВ,<br>ОФІСІВ</div>
-                    </div>
+            <div class="col-lg-4 p-1">
+                <div class="image">
+                    <a href="./dlya_cafe_restoranov.html"><img src="./img/index/classic.webp" class="card-img-top"
+                            alt="classic"></a>
+                    <div class="bottom-left">ДЛЯ КАФЕ, РЕСТОРАНІВ,<br>ОФІСІВ</div>
                 </div>
+            </div>
 
-                <div class="col-lg-4 p-1">
-                    <div class="image">
-                        <a href="./vending.html"><img src="./img/index/vending.webp" class="card-img-top" alt="vending"></a>
-                        <div class="bottom-left">ВЕНДІНГ</div>
-                    </div>
+            <div class="col-lg-4 p-1">
+                <div class="image">
+                    <a href="./vending.html"><img src="./img/index/vending.webp" class="card-img-top" alt="vending"></a>
+                    <div class="bottom-left">ВЕНДІНГ</div>
                 </div>
             </div>
         </div>
+    </div>
 
     <!-- /////////////////////////////////////////   Consultation    ////////////////////////////////////////     -->
 
@@ -284,16 +289,16 @@
                             id="validationTelephone" minlength="18" placeholder="Телефон" required>
                     </div>
                     <div class="mb-3">
-                        <select name="direction" class="form-select main-text-size validationDirection" id="validationDirection"
-                            required>
+                        <select name="direction" class="form-select main-text-size validationDirection"
+                            id="validationDirection" required>
                             <option selected disabled value="">Мене цікавить...</option>
                             <option>Кавомашина для кафе або торгової точки</option>
                             <option>Торговий автомат з кавою або снеками</option>
                         </select>
                     </div>
                     <div class="mb-3">
-                        <input type="text" name="city" class="form-control main-text-size validationCity" id="validationCity"
-                            placeholder="Ваше місто..." required>
+                        <input type="text" name="city" class="form-control main-text-size validationCity"
+                            id="validationCity" placeholder="Ваше місто..." required>
                         <!-- <select name="city" class="form-select validationCity" id="validationCity" required>
                                 <option selected disabled value="">Ваше місто...</option>
                                 <option>Харків</option>
@@ -341,6 +346,94 @@
             </div>
         </div>
     </section>
+    <!-- /////////////////////////////////////////   Calculator    ////////////////////////////////////////     -->
+
+
+    <div class="calc text-center container">
+        <div class="row">
+            <img src="./img/index/calc.webp" class="img-fluid" alt="calc_header">
+            <div>
+                <h3>Розрахунок собівартості напоїв</h3>
+            </div>
+
+            <h4 class="p-2">Оберіть кавомашину</h4>
+        </div>
+        
+        <div class="btn-group p-2" role="group" aria-label="Базовая группа переключателей КМ">
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
+            <label class="btn btn-outline-success fw-bold" for="btnradio1">Bianchi Gaia</label>
+
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+            <label class="btn btn-outline-success fw-bold" for="btnradio2">Bianchi Talia, Carimali Blue
+                Dot</label>
+
+            <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+            <label class="btn btn-outline-success fw-bold" for="btnradio3">Necta Coro Prime</label>
+        </div>
+        <div class="container hr-line-contacts"></div>
+    </div>
+
+    <div class="container text-center">
+        <h4 class="p-2">Вкажіть ціну інгредієнтів</h4>
+        <div class="row">
+            <div class="col col-auto col-md-4">
+                <div class="input-group flex-nowrap mb-3">
+                    <span class="input-group-text calc__input">Зернова кава, 1 кг</span>
+                    <input type="number" min="10" max="1000" step="1" class="form-control" value="240.00">
+                    <span class="input-group-text">грн.</span>
+                </div>
+            </div>
+
+            <div class="col col-auto col-md-4">
+                <div class="input-group flex-nowrap mb-3">
+                    <span class="input-group-text calc__input">Суха молоч. суміш, 1 кг</span>
+                    <input type="number" min="10" max="1000" step="1" class="form-control" value="240.00">
+                    <span class="input-group-text">грн.</span>
+                </div>
+            </div>
+
+            <div class="col col-auto col-md-4">
+                <div class="input-group flex-nowrap mb-3">
+                    <span class="input-group-text calc__input">Ірландський Віскі, 1 кг</span>
+                    <input type="number" min="10" max="1000" step="1" class="form-control" value="240.00">
+                    <span class="input-group-text">грн.</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="input-group flex-nowrap mb-3">
+                    <span class="input-group-text calc__input">Цукор, 1 кг</span>
+                    <input type="number" min="10" max="1000" step="1" class="form-control" value="42.00">
+                    <span class="input-group-text">грн.</span>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="input-group flex-nowrap mb-3">
+                    <span class="input-group-text calc__input">Стакан 180 мл, 1 шт</span>
+                    <input type="number" min="0.1" max="10" step="0.01" class="form-control" value="0.50">
+                    <span class="input-group-text">грн.</span>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="input-group flex-nowrap mb-3">
+                    <span class="input-group-text calc__input">Стакан 340 мл, 1 шт</span>
+                    <input type="number" min="0.1" max="10" step="0.01" class="form-control" value="0.75">
+                    <span class="input-group-text">грн.</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
 
     <!-- /////////////////////////////////////////   Partners    ////////////////////////////////////////     -->
     <div class="separator">
