--- a/src/vending.html
+++ b/src/vending.html
@@ -253,8 +253,6 @@
         </div>
     </section>
 
-
-
     <!-- /////////////////////////////////////////   Magazin    ////////////////////////////////////////     -->
 
     <div class="separator">
@@ -398,32 +396,32 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="3500">
                             <img src="./img/vending/slider/slider.webp" class="d-block w-100 p-3" alt="coffemashine">
-                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="./img/vending/slider/400_podp.webp" class="d-block w-100 p-3" alt="lei-400">
-                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="./img/vending/slider/500.webp" class="d-block w-100 p-3" alt="lei-500">
-                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="./img/vending/slider/600_podp2.webp" class="d-block w-100 p-3" alt="lei-600">
-                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="./img/vending/slider/600_sensor_podp.webp" class="d-block w-100 p-3"
                                 alt="lei-600sensor">
-                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="./img/vending/slider/700_podp.webp" class="d-block w-100 p-3" alt="lei-700">
-                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
                             <img src="./img/vending/slider/vista.webp" class="d-block w-100 p-3" alt="vista">
-                            <a href="./index.html" class="btn text-nowrap fw-bold">Детальніше</a>
+                            <a href="./vending_avtomaty.html" class="btn text-nowrap fw-bold">Детальніше</a>
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"  data-bs-slide="prev">
