--- a/src/chay.html
+++ b/src/chay.html
@@ -422,37 +422,37 @@
                         <div class="row">
                             <div class="col col-auto col-md-6 footer-left">
                                 <h6>Харків</h6>
-                                <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
-                                <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
+                                <a class="telephone text-nowrap" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
+                                <a class="telephone text-nowrap" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
                             </div>
                             <div class="col col-auto col-md-6 footer-left">
                                 <h6>Київ</h6>
-                                <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
+                                <a class="telephone text-nowrap" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Біла Церква</h6>
-                                <a class="telephone" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
+                                <a class="telephone text-nowrap" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
                             </div>
                             <div class="col footer-left">
                                 <h6>Бровари, Бориспіль</h6>
-                                <a class="telephone" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
+                                <a class="telephone text-nowrap" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Черкаси</h6>
-                                <a class="telephone" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
+                                <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
-                                <a class="telephone"
+                                <a class="telephone text-nowrap"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
                         </div>
@@ -465,9 +465,9 @@
                             <h6>ВЕНДІНГ</h6>
                             <p>
                                 Встановлення вендінгового обладнання по містах:
-                                Харків, Київ, Біла Церква, Дніпро, Запоріжжя, Рівне, Львів,
-                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
-                                Миколаїв, Кривий Ріг, Маріуполь, Тернопіль
+                                Харків, Київ, Полтава, Дніпро, Запоріжжя, Рівне, Львів,
+                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса, 
+                                Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.
 
                             </p>
                         </div>
@@ -475,10 +475,10 @@
 
                         <h6>Менеджер з розвитку</h6>
                         <p>
-                            <a class="telephone " href="tel:+380950252822">т. +38 (095) 025-28-22</a>
+                            <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
                         <p>
-                            <a class="telephone"
+                            <a class="telephone text-nowrap"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                         </p>
 
