--- a/src/contacty.html
+++ b/src/contacty.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Зв'язатися з нами | Bianchi Professional</title>
-
     <link rel="icon" href="./favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,14 +17,11 @@
 </head>
 
 <body class="contacts_body">
-
     <!-- /////////////////////////////////////////   Header    //////////////////////////////////////// -->
-
     <header class="header">
         <div class="header__up">
             <div class="header__wrapper container text-center">
                 <div class="row">
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">
@@ -34,10 +30,8 @@
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380935475572">(093) 547-55-72</a>
                             </li>
-
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">КИЇВ</li>
@@ -46,17 +40,14 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БРОВАРИ, БОРИСПІЛЬ</li>
-
                             <li class="telephone text-nowrap">
                                 <a class="telephone" href="tel:+380989700921">(098) 970-09-21</a>
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone text-nowrap">БІЛА ЦЕРКВА</li>
@@ -65,7 +56,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ЧЕРКАСИ</li>
@@ -74,7 +64,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <ul>
                             <li class="telephone">ВЕНДІНГ</li>
@@ -83,24 +72,21 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="header__item col">
                         <button class="btn text-nowrap" data-bs-toggle="modal" data-bs-target="#Modal">Залишити
                             заявку</button>
                     </div>
-
                 </div>
             </div>
         </div>
     </header>
-
     <!-- /////////////////////////////////////////   sidepanel    ////////////////////////////////////////     -->
-
     <div class="sidepanel__wrapper d-none d-lg-block">
         <div class="sidepanel">
             <div class="sidepanel__text text-nowrap"><span>Соціальні мережі</span></div>
             <div class="sidepanel__divider"></div>
-            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link" class="sidepanel__icon">
+            <a target="_blank" href="https://instagram.com/bianchiprofessional?utm_medium=copy_link"
+                class="sidepanel__icon">
                 <img src="./img/index/instagram_green.webp" alt="instagram">
             </a>
             <a target="_blank" href="https://facebook.com/bianchiprofessional" class="sidepanel__icon">
@@ -111,14 +97,14 @@
             </a>
         </div>
     </div>
-
-     <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
-
+    <!-- /////////////////////////////////////////   navbar    ////////////////////////////////////////     -->
     <nav class="navbar navbar-expand-lg bg-light" id="navbar">
         <div class="container">
             <div>
-                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48" class="d-inline-block align-text-top">
-                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48" class="d-inline-block align-text-top">
+                <img src="./img/logo_menu1.webp" id="logo1" alt="logo" width="52" height="48"
+                    class="d-inline-block align-text-top">
+                <img src="./img/logo_menu2.webp" alt="logo" width="142" height="48"
+                    class="d-inline-block align-text-top">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
@@ -129,7 +115,6 @@
                     <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="./index.html">ПРО НАС</a>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -150,7 +135,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -171,7 +155,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <ul class="btn-group">
                             <li class="nav-item">
@@ -190,7 +173,6 @@
                             </li>
                         </ul>
                     </li>
-
                     <li class="nav-item">
                         <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
@@ -198,15 +180,11 @@
             </div>
         </div>
     </nav>
-
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-
     <div class="separator">
         <h3>Контактна інформація</h3>
     </div>
-
     <!-- /////////////////////////////////////////   Body    ////////////////////////////////////////     -->
-
     <div class="container">
         <div class="description container contacts fill">
             <div class="row">
@@ -216,7 +194,6 @@
                 </div>
             </div>
         </div>
-
         <div class="row">
             <div class="col p-5 m-3 mb-5 contacts fill">
                 <h5 class="text-center green"><b>ХОРЕКА</b></h5>
@@ -232,9 +209,7 @@
                         <a href="tel:+380935475572">+38(093) 547-55-72</a>
                     </li>
                 </ul>
-
                 <div class="container hr-line-contacts"></div>
-
                 <h6><b>КИЇВ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
@@ -242,9 +217,7 @@
                         <a href="tel:+380660227720">+38(066) 022-77-20</a>
                     </li>
                 </ul>
-
                 <div class="container hr-line-contacts"></div>
-
                 <h6><b>БРОВАРИ, БОРИСПІЛЬ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
@@ -252,9 +225,7 @@
                         <a href="tel:+380989700921">+38(098) 970-09-21</a>
                     </li>
                 </ul>
-
                 <div class="container hr-line-contacts"></div>
-
                 <h6><b>БІЛА ЦЕРКВА</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
@@ -262,9 +233,7 @@
                         <a href="tel:+380504400492">+38(050) 440-04-92</a>
                     </li>
                 </ul>
-
                 <div class="container hr-line-contacts"></div>
-
                 <h6><b>ЧЕРКАСИ</b></h6>
                 <ul>
                     <li class="text-nowrap tel">
@@ -273,13 +242,13 @@
                     </li>
                 </ul>
             </div>
-
             <div class="col p-5 m-3 mb-5 contacts fill">
                 <h5 class="text-center green"><b>ВЕНДІНГ</b></h5>
                 <div class="container hr-line-contacts"></div>
                 <h6>Встановлення вендінгового обладнання по містах:
-                    Харків, Київ, Біла Церква, Дніпро, Запоріжжя, Рівне, Львів, Івано-Франківськ, Чернівці, Вінниця,
-                    Житомир, Одеса, Миколаїв, Кривий Ріг, Маріуполь, Тернопіль.</h6>
+                    Харків, Київ, Полтава, Дніпро, Запоріжжя, Рівне, Львів,
+                    Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
+                    Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.</h6>
                 <div class="container hr-line-contacts"></div>
                 <ul>
                     <li class="text-nowrap tel">
@@ -292,9 +261,7 @@
                     </li>
                 </ul>
             </div>
-
             <!-- /////////////////////////////////////////   Consultation    ////////////////////////////////////////     -->
-
             <div class="col p-5 m-3 mb-5 contacts fill">
                 <form class="needs-validation form-contacts" novalidate>
                     <h4 class="green text-center"><b> Залиште заявку і наш менеджер запропонує вам кращі умови
@@ -336,9 +303,7 @@
             </div>
         </div>
     </div>
-
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
-
     <footer class="footer">
         <div class="footer-items">
             <div class="container">
@@ -351,66 +316,56 @@
                         <div class="row">
                             <div class="col col-auto col-md-6 footer-left">
                                 <h6>Харків</h6>
-                                <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
-                                <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
+                                <a class="telephone text-nowrap" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
+                                <a class="telephone text-nowrap" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
                             </div>
                             <div class="col col-auto col-md-6 footer-left">
                                 <h6>Київ</h6>
-                                <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
+                                <a class="telephone text-nowrap" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Біла Церква</h6>
-                                <a class="telephone" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
+                                <a class="telephone text-nowrap" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
                             </div>
                             <div class="col footer-left">
                                 <h6>Бровари, Бориспіль</h6>
-                                <a class="telephone" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
+                                <a class="telephone text-nowrap" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Черкаси</h6>
-                                <a class="telephone" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
+                                <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
-                                <a class="telephone"
+                                <a class="telephone text-nowrap"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
                         </div>
                     </div>
-
-
                     <div class="col-4 p-4 offset-md-2">
-
                         <div class="footer-left">
                             <h6>ВЕНДІНГ</h6>
                             <p>
                                 Встановлення вендінгового обладнання по містах:
-                                Харків, Київ, Біла Церква, Дніпро, Запоріжжя, Рівне, Львів,
+                                Харків, Київ, Полтава, Дніпро, Запоріжжя, Рівне, Львів,
                                 Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
-                                Миколаїв, Кривий Ріг, Маріуполь, Тернопіль
-
+                                Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.
                             </p>
                         </div>
-
-
                         <h6>Менеджер з розвитку</h6>
                         <p>
-                            <a class="telephone " href="tel:+380950252822">т. +38 (095) 025-28-22</a>
+                            <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
                         <p>
-                            <a class="telephone"
+                            <a class="telephone text-nowrap"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                         </p>
-
                     </div>
                 </div>
             </div>
@@ -419,9 +374,7 @@
             <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
     </footer>
-
     <!-- /////////////////////////////////////modal///////////////////////////// -->
-
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -463,18 +416,14 @@
                             </select> -->
                         </div>
                     </div>
-
                     <div class="modal-footer">
-
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрити</button>
                         <button name="sendRequestModal" class="btn send-request-modal">Відправити</button>
                     </div>
                 </form>
-
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
