--- a/src/vending.html
+++ b/src/vending.html
@@ -291,7 +291,7 @@
                             ароматною кавою від лідерів Європейського ринку.</li>
                         <li>Безкоштовна гаряча лінія для клієнтів.</li>
                         <li>Можливість оплачувати напої банківською карткою за допомогою мобільного додатку.</li>
-                        <li>Сучасний дізайн та простота використання обладнання.</li>
+                        <li>Сучасний дизайн та простота використання обладнання.</li>
                         <li>До можливого мінімуму скорочуються перерви на каву. Час приготування напою не більше кількох
                             хвилин.</li>
                         <li>Зростає продуктивність праці – свіжа кава не дає співробітникам спати на робочому місці.
@@ -333,8 +333,8 @@
                             <h5>Підтвердження</h5>
                             <p class="lh-sm text-muted">
                                 <small>
-                                    Наш фахівець зв'яжеться з Вами для визначення місця установки кавового апарату <span
-                                        class="select">* </span>
+                                    Наш фахівець зв'яжеться з Вами для визначення місця установки кавового апарату<span
+                                        class="select">*</span>
                                 </small>
                             </p>
                         </div>
@@ -439,7 +439,7 @@
                 <p class="card-text lh-sm indent">Наші вендінгові апарати обладнані системою оплати банківською картою за допомогою
                     мобільного додатку ProstoPay, а також Googl Pay, Apple Pay, NFC</p>
 
-                <img src="./img/vending/vending2.webp" class="p-3 img-fluid" alt="magazin">
+                <img src="./img/vending/oplata.webp" class="p-3 img-fluid" alt="pay">
 
                 <p class="card-text lh-sm indent">Додаток підтримується OS Android та MAC OS. Завантажити додаток ви можете за
                     посиланнями нижче або відсканувавши QR код безпосередньо з апарату.</p>
@@ -546,9 +546,7 @@
 
         <p class="text-center green fw-bold">Бажаєте стати нашим партнером? Чекаємо на ваш дзвінок або повідомлення.</p>
     </div>
-   
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
-
     <footer class="footer">
         <div class="footer-items">
             <div class="container">
@@ -561,66 +559,56 @@
                         <div class="row">
                             <div class="col col-auto col-md-6 footer-left">
                                 <h6>Харків</h6>
-                                <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
-                                <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
+                                <a class="telephone text-nowrap" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
+                                <a class="telephone text-nowrap" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
                             </div>
                             <div class="col col-auto col-md-6 footer-left">
                                 <h6>Київ</h6>
-                                <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
+                                <a class="telephone text-nowrap" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Біла Церква</h6>
-                                <a class="telephone" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
+                                <a class="telephone text-nowrap" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
                             </div>
                             <div class="col footer-left">
                                 <h6>Бровари, Бориспіль</h6>
-                                <a class="telephone" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
+                                <a class="telephone text-nowrap" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Черкаси</h6>
-                                <a class="telephone" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
+                                <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
-                                <a class="telephone"
+                                <a class="telephone text-nowrap"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
                         </div>
                     </div>
-
-
                     <div class="col-4 p-4 offset-md-2">
-
                         <div class="footer-left">
                             <h6>ВЕНДІНГ</h6>
                             <p>
                                 Встановлення вендінгового обладнання по містах:
-                                Харків, Київ, Біла Церква, Дніпро, Запоріжжя, Рівне, Львів,
-                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
-                                Миколаїв, Кривий Ріг, Маріуполь, Тернопіль
-
+                                Харків, Київ, Полтава, Дніпро, Запоріжжя, Рівне, Львів,
+                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса, 
+                                Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.
                             </p>
                         </div>
-
-
                         <h6>Менеджер з розвитку</h6>
                         <p>
-                            <a class="telephone" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
+                            <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
                         <p>
-                            <a class="telephone"
+                            <a class="telephone text-nowrap"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                         </p>
-
                     </div>
                 </div>
             </div>
@@ -684,9 +672,7 @@
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
