--- a/src/zernovoy_kofe.html
+++ b/src/zernovoy_kofe.html
@@ -216,7 +216,7 @@
                     <small>
                         <li>
                             Наша кава виготовлена на ультрасучасних кавових фабриках Італії та Голандії (ICS) із
-                            застосуванням найкращого обладнання та професійних знань висококлассних світових
+                            застосуванням найкращого обладнання та професійних знань висококласних світових
                             спеціалістів.
                         </li>
 
@@ -341,9 +341,7 @@
             </div>
         </div>
     </div>
-
     <!-- /////////////////////////////////////////   Footer    ////////////////////////////////////////     -->
-
     <footer class="footer">
         <div class="footer-items">
             <div class="container">
@@ -356,66 +354,56 @@
                         <div class="row">
                             <div class="col col-auto col-md-6 footer-left">
                                 <h6>Харків</h6>
-                                <a class="telephone" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
-                                <a class="telephone" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
+                                <a class="telephone text-nowrap" href="tel:+380960542770">т. +38 (096) 054-27-70</a>
+                                <a class="telephone text-nowrap" href="tel:+380935475572">т. +38 (093) 547-55-72</a>
                             </div>
                             <div class="col col-auto col-md-6 footer-left">
                                 <h6>Київ</h6>
-                                <a class="telephone" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
+                                <a class="telephone text-nowrap" href="tel:+380660227720">т. +38 (066) 022-77-20</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Біла Церква</h6>
-                                <a class="telephone" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
+                                <a class="telephone text-nowrap" href="tel:+380504400492">т. +38 (050) 440-04-92</a>
                             </div>
                             <div class="col footer-left">
                                 <h6>Бровари, Бориспіль</h6>
-                                <a class="telephone" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
+                                <a class="telephone text-nowrap" href="tel:+380989700921">т. +38 (098) 970-09-21</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>Черкаси</h6>
-                                <a class="telephone" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
+                                <a class="telephone text-nowrap" href="tel:+380989700929">т. +38 (098) 970-09-29</a>
                             </div>
                         </div>
-
                         <div class="row">
                             <div class="col footer-left">
                                 <h6>e-mail</h6>
-                                <a class="telephone"
+                                <a class="telephone text-nowrap"
                                     href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                             </div>
                         </div>
                     </div>
-
-
                     <div class="col-4 p-4 offset-md-2">
-
                         <div class="footer-left">
                             <h6>ВЕНДІНГ</h6>
                             <p>
                                 Встановлення вендінгового обладнання по містах:
-                                Харків, Київ, Біла Церква, Дніпро, Запоріжжя, Рівне, Львів,
-                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса,
-                                Миколаїв, Кривий Ріг, Маріуполь, Тернопіль
-
+                                Харків, Київ, Полтава, Дніпро, Запоріжжя, Рівне, Львів,
+                                Івано-Франківськ, Чернівці, Вінниця, Житомир, Одеса, 
+                                Кривий Ріг, Чернігів, Калуш, Коломия, Стрий.
                             </p>
                         </div>
-
-
                         <h6>Менеджер з розвитку</h6>
                         <p>
-                            <a class="telephone " href="tel:+380950252822">т. +38 (095) 025-28-22</a>
+                            <a class="telephone text-nowrap" href="tel:+380950252822">т. +38 (095) 025-28-22</a>
                         </p>
                         <p>
-                            <a class="telephone"
+                            <a class="telephone text-nowrap"
                                 href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
                         </p>
-
                     </div>
                 </div>
             </div>
@@ -424,9 +412,7 @@
             <h6><small>© 2016-2022 Bianchi professional</small></h6>
         </div>
     </footer>
-
     <!-- /////////////////////////////////////modal///////////////////////////// -->
-
     <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
