Якорь на калькулятор

--- a/src/dlya_magazinov_i_setey.html
+++ b/src/dlya_magazinov_i_setey.html
@@ -466,7 +466,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
             </div>
             <div class="toast-body">
-                Скористайтеся нашим <a href="./index#calc">калькулятором</a>.
+                Скористайтеся нашим <a href="./index.html#calc">калькулятором</a>.
             </div>
         </div>
     </div>
