--- a/src/index.html
+++ b/src/index.html
@@ -316,7 +316,8 @@
         </div>
     </section>
     <!-- /////////////////////////////////////////   Calculator    ////////////////////////////////////////     -->
-    <div class="calc text-center container" name="calc">
+    <div class="calc text-center container">
+        <a name="calc"></a>
         <div class="row">
             <img src="./img/index/calc.webp" class="img-fluid" alt="calc_header">
             <div>
